src/styles/lazyload.css
.lazy-column {
  display: flex;
  flex-direction: column;
  gap: 3px;
  align-items: center;
  margin-left: 30px;
}

.lazy-row {
  display: flex;
  gap: 3px;
  width: 70vw;
}

.image-container {
  position: relative;
  line-height: 0; /* Fix inline gap issue */
}

.image-overlay {
  position: absolute;
  top: 0;
  left: 0;
  background: linear-gradient(to bottom,
      rgba(0, 0, 0, 0.0) 30%,
      rgba(0, 0, 0, 0.3) 50%,
      rgba(0, 0, 0, 0.5) 80%);
  display: flex;
  flex-direction: row-reverse;
  align-items: flex-end;
  justify-content: flex-start;
  padding: 10px;
  opacity: 0;
  transition: opacity 0.3s ease;
}

.image-container:hover .image-overlay {
  opacity: 1;
}

.image-title {
  font-family: "Quicksand", system-ui;
  font-optical-sizing: auto;
  font-weight: 400;
  font-size: 20px;
  color: #ffffff;
  text-align: center;
  word-break: break-all;
}

